fix website today

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="./build/app.css" />
   <link rel="stylesheet" href="./build/tailwind.css" />
 </head>
+<!-- npm install -->
 <!-- npx tailwindcss -i css/tailwind.css -o build/tailwind.css --watch -->
 
 <body class="dark:bg-dark transition-all duration-200 ease-in">
@@ -57,7 +58,7 @@
       </div>
 
       <div class="max-w-[1200px] mx-auto px-[15px]">
-        <div class="lg:pt-[230px] pt-[50px] max-w-3xl text-white">
+        <div class="2xl:pt-[230px] lg:pt-[140px] pt-[50px] max-w-3xl text-white">
           <h1 class="lg:mb-10 mb-4 font-bold md:leading-[80px] leading-[50px] md:text-[60px] text-[30px]">Meaningful
             investments in Main Street businesses</h1>
           <p class="max-w-[470px] font-normal lg:text-2xl text-xl lg:leading-8 leading-6">Browse vetted investment
@@ -637,7 +638,7 @@
   <div
     class="overlay-loading flex justify-center items-center z-[999999999999] fixed top-0 bottom-0 right-0 left-0 bg-[#19216D]">
     <div
-      class="w-[185px] h-[185px] rounder-[99rem] relative mx-auto my-0 before:absolute before:top-0 before:left-0 before:w-full before:h-full before:rounded-[99rem] before:border-solid before:border-8 before:border-transparent before:border-r-[#ff6bcb] before:border-b-[#ffa400] before:animate-circle-loading">
+      class="2xl:w-[140px] 2xl:h-[140px] w-[120px] h-[120px] rounder-[99rem] relative mx-auto my-0 before:absolute before:top-0 before:left-0 before:w-full before:h-full before:rounded-[99rem] before:border-solid before:border-8 before:border-transparent before:border-r-[#ff6bcb] before:border-b-[#ffa400] before:animate-circle-loading">
     </div>
   </div>
 
